--- a/nullkart.ioc
+++ b/nullkart.ioc
@@ -4,12 +4,12 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C3.I2C_Mode=I2C_Fast
-I2C3.IPParameters=I2C_Mode
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
-Mcu.IP0=I2C3
+Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
@@ -22,27 +22,28 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC9
-Mcu.Pin11=PA8
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
 Mcu.Pin12=PA13
 Mcu.Pin13=PA14
 Mcu.Pin14=PB3
 Mcu.Pin15=PB4
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=PB5
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PC6
-Mcu.Pin9=PC8
-Mcu.PinsNb=22
+Mcu.Pin5=PC0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PC7
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -50,10 +51,8 @@ MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.I2C3_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -63,6 +62,10 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=L_DIR_2
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -96,29 +99,31 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=IMU_SCL
-PA8.Mode=I2C
-PA8.Signal=I2C3_SCL
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=R_DIR_1
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=IMU_SDA
-PB4.Mode=I2C
-PB4.Signal=I2C3_SDA
-PB8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PB8.GPIO_Label=ENC1_A_BLUE
-PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=L_DIR_1
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB8.Locked=true
-PB8.Signal=GPXTI8
-PB9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PB9.GPIO_Label=ENC1_B_WHITE
-PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Locked=true
-PB9.Signal=GPXTI9
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=R_DIR_2
+PC0.Locked=true
+PC0.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -131,18 +136,8 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=MOTOR1_REV
-PC6.Locked=true
-PC6.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=MOTOR1_FWD
-PC8.Locked=true
-PC8.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=MOTOR1_PWM
-PC9.Locked=true
-PC9.Signal=S_TIM3_CH4
+PC7.Locked=true
+PC7.Signal=S_TIM3_CH2
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -170,8 +165,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=bike0.ioc
-ProjectManager.ProjectName=bike0
+ProjectManager.ProjectFileName=nullkart.ioc
+ProjectManager.ProjectName=nullkart
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -180,7 +175,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -212,17 +207,16 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.GPXTI8.0=GPIO_EXTI8
-SH.GPXTI8.ConfNb=1
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
-SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
-SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=10000
 TIM2.Prescaler=83
-TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Period,Channel-PWM Generation4 CH4
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
 TIM3.Period=4200
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
