--- a/nullkart.ioc
+++ b/nullkart.ioc
@@ -12,45 +12,55 @@ Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM5
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM5
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB8
-Mcu.Pin18=PB9
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC7
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin28=VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PC7
-Mcu.PinsNb=23
-Mcu.ThirdPartyNb=0
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=29
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-BLE2.3.3.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.15.0
+MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -62,6 +72,10 @@ NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=L_DIR_2
 PA10.Locked=true
@@ -69,12 +83,12 @@ PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
-PA13.Mode=Trace_Asynchronous_SW
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
-PA14.Mode=Trace_Asynchronous_SW
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
@@ -99,15 +113,21 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=R_DIR_1
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
 PB3.Locked=true
-PB3.Mode=Trace_Asynchronous_SW
-PB3.Signal=SYS_JTDO-SWO
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
 PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
 PB5.GPIOParameters=GPIO_Label
@@ -147,6 +167,7 @@ PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -154,12 +175,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F401RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -175,52 +196,110 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM5_Init-TIM5-false-HAL-true
-RCC.48MHZClocksFreq_Value=48000000
-RCC.AHBFreq_Value=84000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM5_Init-TIM5-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
+RCC.48MHZClocksFreq_Value=18285714.285714287
+RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=42000000
-RCC.APB1TimFreq_Value=84000000
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimFreq_Value=84000000
-RCC.CortexFreq_Value=84000000
-RCC.FCLKCortexFreq_Value=84000000
-RCC.HCLKFreq_Value=84000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=64000000
+RCC.APB2Freq_Value=64000000
+RCC.APB2TimFreq_Value=64000000
+RCC.CortexFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=64000000
+RCC.HCLKFreq_Value=64000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=84000000
-RCC.PLLCLKFreq_Value=84000000
-RCC.PLLN=336
-RCC.PLLP=RCC_PLLP_DIV4
+RCC.MCO2PinFreq_Value=64000000
+RCC.PLLCLKFreq_Value=64000000
+RCC.PLLM=8
+RCC.PLLN=64
 RCC.PLLQ=7
-RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLQCLKFreq_Value=18285714.285714287
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=84000000
+RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=336000000
-RCC.VcooutputI2S=96000000
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=128000000
+RCC.VcooutputI2S=192000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CLKPhase,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+STMicroelectronics.X-CUBE-BLE2.3.3.0.BSP.number=4
+STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjController=true
+STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL=Basic
+STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACE=UserBoard
+STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjUtils=true
+STMicroelectronics.X-CUBE-BLE2.3.3.0.IPParameters=BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACE,BlueNRGAa2CcWirelessJjBlueNRGAa2JjUtils,BlueNRGAa2CcWirelessJjBlueNRGAa2JjController,BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL
+STMicroelectronics.X-CUBE-BLE2.3.3.0.WirelessJjBlueNRGAa2_Checked=true
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.STBoard=false
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.api=HAL_EXTI_DRIVER
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.component=
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.condition=SEMBlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACEJjUserBoard
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.instance=PA0-WKUP
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.ip=GPIO
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.mode=EXTI
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.name=Exti Line
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.semaphore=
+STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.solution=PA0-WKUP
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.STBoard=false
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.api=Unknown
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.component=
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.condition=SEMBlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACEJjUserBoard
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.instance=PA8
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.ip=GPIO
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.mode=Output
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.name=Reset Line
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.semaphore=
+STMicroelectronics.X-CUBE-BLE2.3.3.01.BSP.solution=PA8
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.STBoard=false
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.api=Unknown
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.component=
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.condition=SEMBlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACEJjUserBoard
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.instance=PA1
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.ip=GPIO
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.mode=Output
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.name=CS Line
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.semaphore=
+STMicroelectronics.X-CUBE-BLE2.3.3.02.BSP.solution=PA1
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.STBoard=false
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.api=BSP_BUS_DRIVER
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.component=
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.condition=SEMBlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACEJjUserBoard
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.instance=SPI1
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.ip=SPI
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.mode=Full-Duplex Master
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.name=BUS IO driver
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.semaphore=
+STMicroelectronics.X-CUBE-BLE2.3.3.03.BSP.solution=SPI1
+STMicroelectronics.X-CUBE-BLE2.3.3.0_SwParameter=BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACE\:UserBoard;BlueNRGAa2CcWirelessJjBlueNRGAa2JjUtils\:true;BlueNRGAa2CcWirelessJjBlueNRGAa2JjController\:true;BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL\:Basic;
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=10000
-TIM2.Prescaler=83
+TIM2.Prescaler=63
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
-TIM3.Period=4200
+TIM3.Period=3200
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
+VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0.Mode=WirelessJjBlueNRGAa2
+VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0.Signal=STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
