attempt at getting ble reads and quadrature encoder working

--- a/nullkart.ioc
+++ b/nullkart.ioc
@@ -23,34 +23,38 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC7
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC7
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin28=VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin32=VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=29
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=33
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-BLE2.3.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -90,6 +94,10 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=R_ENC_2
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -134,6 +142,10 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=L_DIR_1
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=R_ENC_1
+PB7.Locked=true
+PB7.Signal=GPIO_Input
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
@@ -156,6 +168,14 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=L_ENC_1
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=L_ENC_2
+PC3.Locked=true
+PC3.Signal=GPIO_Input
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
 PH0\ -\ OSC_IN.Locked=true
@@ -245,7 +265,7 @@ STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjControlle
 STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL=Basic
 STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACE=UserBoard
 STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjUtils=true
-STMicroelectronics.X-CUBE-BLE2.3.3.0.IPParameters=BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACE,BlueNRGAa2CcWirelessJjBlueNRGAa2JjUtils,BlueNRGAa2CcWirelessJjBlueNRGAa2JjController,BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL
+STMicroelectronics.X-CUBE-BLE2.3.3.0.IPParameters=BlueNRGAa2CcWirelessJjBlueNRGAa2JjController,BlueNRGAa2CcWirelessJjBlueNRGAa2JjUtils,BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL,BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTLIiINTERFACE
 STMicroelectronics.X-CUBE-BLE2.3.3.0.WirelessJjBlueNRGAa2_Checked=true
 STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.STBoard=false
 STMicroelectronics.X-CUBE-BLE2.3.3.00.BSP.api=HAL_EXTI_DRIVER
