--- a/nullkart.ioc
+++ b/nullkart.ioc
@@ -65,6 +65,9 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -94,10 +97,11 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_Label
+PA15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA15.GPIO_Label=R_ENC_2
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA15.Locked=true
-PA15.Signal=GPIO_Input
+PA15.Signal=GPXTI15
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -142,10 +146,11 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=L_DIR_1
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB7.GPIO_Label=R_ENC_1
+PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB7.Locked=true
-PB7.Signal=GPIO_Input
+PB7.Signal=GPXTI7
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
@@ -168,14 +173,16 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
+PC2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC2.GPIO_Label=L_ENC_1
+PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC2.Locked=true
-PC2.Signal=GPIO_Input
-PC3.GPIOParameters=GPIO_Label
+PC2.Signal=GPXTI2
+PC3.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC3.GPIO_Label=L_ENC_2
+PC3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC3.Locked=true
-PC3.Signal=GPIO_Input
+PC3.Signal=GPXTI3
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
 PH0\ -\ OSC_IN.Locked=true
@@ -250,6 +257,14 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
